<resources>
    <string name="app_name">BinarChallenge3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_screen">Screen 1</string>
    <string name="go_to_screen_2">Go To Screen 2</string>
    <string name="go_to_screen_3">Go To Screen 3</string>
    <string name="back_to_screen_3">Back To Screen 3</string>
    <string name="go_to_screen_4">Go To Screen 4</string>
    <string name="second_screen">Screen 2</string>
    <string name="third_screen">Screen 3</string>
    <string name="fourth_screen">Screen 4</string>
    <string name="input_name_hint">Input your name</string>
    <string name="input_age_hint">Input your age</string>
    <string name="input_address_hint">Input your address</string>
    <string name="input_job_hint">Input your job</string>
    <string name="input_the_height">Input the height</string>
    <string name="input_the_gravity">Input the gravity</string>
    <string name="input_the_mass">Input the mass</string>

    <string name="your_name">Nama Anda %s</string>
    <string name="your_age">Usia Anda, bernilai %s</string>
    <string name="your_address">Alamat Anda %s</string>
    <string name="your_job">Pekerjaan Anda %s</string>
    <string name="potential_energy">Energi potensial sebesar %s Joule</string>
</resources>